5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1585_1446.log
== TEST (2019-03-24 10:37:32) 
-- CODE:
polpas=float(input("litros comprados"))
doacao=float(input("litros doados"))
resto=float(input("ficara com michel"))
total=(polpas_ doacao)
print(total)
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
File "XXXX", line 4
    total=(polpas_ doacao)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 10:37:55) 
-- CODE:
polpas=float(input("litros comprados"))
doacao=float(input("litros doados"))
resto=float(input("ficara com michel"))
total=(polpas - doacao)
print(total)
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    doacao=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 10:38:40) 
-- CODE:
polpas=float(input("litros comprados"))
doacao=float(input("litros doados"))
resto=float(input("ficara com michel"))
total=(polpas - doacao)
print(total)
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- EXECUTION TIME:
0.137214
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1446/main.py", line 2, in <module>
    doacao=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 10:38:58) 
-- CODE:
polpas=float(input("litros comprados"))
doacao=float(input("litros doados"))
total=(polpas - doacao)
print(total)
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    doacao=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 10:39:20) 
-- CODE:
polpas=float(input("litros comprados"))
doacao=float(input("litros doados"))
total=(polpas - doacao)
print(total)
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- EXECUTION TIME:
0.135698
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1446/main.py", line 2, in <module>
    doacao=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 10:41:26) 
-- CODE:
polpas=float(input("litros comprados"))
doacao=float(input("litros doados"))
total=(polpas - doacao)
print(round(total,3)
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
File "XXXX", line 7
    
                                                                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 10:42:14) 
-- CODE:
polpas=float(input("litros comprados"))
doacao=float(input("litros doados"))
total=(polpas - doacao)
print(round(total,3))
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    doacao=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 10:42:40) 
-- CODE:
polpas=float(input("litros comprados"))
doacao=float(input("litros doados"))
total=(polpas - doacao)
print(round(total,3))
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- EXECUTION TIME:
0.149121
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1446/main.py", line 2, in <module>
    doacao=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 10:43:27) 
-- CODE:
polpas=float(input("litros comprados"))
doacao=float(input("litros doados"))
total=(polpas - doacao)
print(round(total,3))
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    doacao=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 10:43:56) 
-- CODE:
polpas=float(input("litros comprados"))
doacao=float(input("litros doados"))
total=(polpas - doacao)
print(round(total,3))
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- EXECUTION TIME:
0.210169
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1446/main.py", line 2, in <module>
    doacao=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:22:36) 
-- CODE:
polpas=float(input("quantidades de polpas: "))
doacao=2/3 * polpas
diferenca= polpas-doacao
print(round(diferenca,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:22:55) 
-- CODE:
polpas=float(input("quantidades de polpas: "))
doacao=2/3 * polpas
diferenca= polpas-doacao
print(round(diferenca,3))
-- EXECUTION TIME:
0.176731
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
